# neglected-diagnostics

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compressed_web.txt  local_host.sh  local_setup.sh  package-lock.json  package.json  phase1-2-actions.md  pyproject.toml  requirements.txt  road_map.md  temp.ini
.github/workflows/: build-documentation.yml  linting.yml  smoke-test.yml  testing-and-coverage.yml
.streamlit/: config.toml  secrets.toml
data/Sequence Haplotypes/: COI_Atlantic Salmon_trimmed sequences_reduced.fasta  Sei whale_CytB_alignedcleaned.fasta
data/Sequence Haplotypes/Sequence Haplotypes output/: sequence_haplotypes_Sei whale_CytB.fasta  sequence_variability_Atlantic Salmon_COI.fasta
data/Sequence Search/: Sei whale_CytB_unaligned.fasta  Sei whale_Dloop_408.fasta
data/Sequence Variability/: Beluga whale_complete mitochondrion_cleaned.fasta  Beluga whale_complete mitochondrion_sequence_variability_table.csv  Sei whale_Dloop_sequence_variability_table.csv
deployment/: Dockerfile  Instruction to set Seq2Dx with script.docx  build.sh  deploy.sh  local_run.sh  local_setup.sh
docs/: _config.yml  _toc.yml  api.rst  conf.py  index.rst  intro.md
src/: Home.py  build.sh  ndiag-lin.spec  ndiag-win.spec  ndiag.py  ndiag.spec  requirements.txt
src/app/: Home.py  find_assay_design_guide.md  find_assay_target_guide.md  home_markdown.md  main.py  multisequence_alignment.md  requirements.txt  sequence_haplotypes_guide.md  sequence_variability_guide.md  streamlit_app.py
src/assets/: home_markdown.md  sequence_search_quick_guide.md
src/common/: constants.py  data_processing.py  render_method.py  setup.py
src/frontend/: aggrid_table.py  download_data.py  filter_dataframe.py
src/genetic_testing/: datatypes.py  main.py  sequence_variability.py
src/pages/: 2_Sequence_Search.py  3_Sequence_Haplotypes.py  4_Sequence_Variability.py  5_Find_Assay_Design_Area.py  5_Find_Assay_Target_Area.py
src/utils/: log.py
static/: msa_cleaner_default.ini
tests/common/: test_dataprocessing.py
tests/genetic_testing/: test_example_module.py
(+119 files in other folders)
